[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/BuffCardBack.png" type="Texture" id=1]
[ext_resource path="res://Common/Res/Entities/BuffDeck.gd" type="Script" id=2]
[ext_resource path="res://Common/Res/Themes/DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://Common/Res/Fonts/NunitoSans-28.tres" type="DynamicFont" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 130 )

[node name="BuffDeck" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="InfoLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.0
margin_top = -19.5
margin_right = 119.0
margin_bottom = 19.5
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "Buy Effect Card
2 Coins"
align = 1

[connection signal="input_event" from="." to="." method="_on_BuffDeck_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_BuffDeck_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BuffDeck_mouse_exited"]
